--- a/src/Components/Orders/Orders.css
+++ b/src/Components/Orders/Orders.css
@@ -1,3 +1,13 @@
 .order-item{
     margin-top: 50px;
 }
+.btn-review{
+    margin-top: 10px;
+    height: 56px;
+    width: 90%;
+    background-color: #FF9900;
+    border-radius: 4px;
+    border: none;
+    
+    font-weight: 600;
+}
